Update plugins resource service URL to new version.

This is because the old URL is used by XP/Vista clients that
cannot be updated with new Flash. The new metadata files are already
live and landed in 173582711.

BUG=778856

Change-Id: I42c171930518d803398f0d2db0d6420962cecf46
Reviewed-on: https://chromium-review.googlesource.com/741033
Reviewed-by: Bernhard Bauer <bauerb@chromium.org>
Commit-Queue: Will Harris <wfh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512201}
Former-commit-id: 9f2b8a0a0c0e24850d7838334f08dc05b6d8d6cd